<resources>
    <string name="app_name">MobileApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="Old_Pass">Old Password</string>
    <string name="VCode">Old Password</string>
    <string name="New_Pass">New Password</string>
    <string name="login">Login</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="backLogin">Back to Login?</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Back to Login?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="lastname_error">Please enter your lastname</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="phone_len">Phone Number must be of 12 characers</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Password is too weak.</string>
    <string name="success_message">Succesfully registered.</string>
    <string name="success">Success.</string>
    <string name="user_not_found">User not found.</string>
    <string name="write_credentials">Write your credentials.</string>
    <string name="write_new_password">Write your new password.</string>
    <string name="write_Email_password">Write your Email and old Password.</string>
    <string name="correct">Fields are filled correct.</string>
    <string name="user_exists">This user is alrady registered.</string>
    <string name="wrong_credentials">Wrong email or password.</string>
    <string name="wrong">Wrong code.</string>
    <string name="changePass">Change your password.</string>
    <string name="code">Your recived code.</string>
    <string name="verify">Verify</string>
    <string name="verifyEmail">Verify your email please.</string>
    <string name="Location">FitIn Location</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning code...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="text_quote">
        <item> Things may come to those who wait</item>
        <item> to those who wait</item>
        <item> but only the things </item>
        <item> left by those who HUSTLE</item>
    </string-array>
    <string-array name="text_quote1">
        <item>All our dreams can come true, if we have the courage to pursue them.</item>
        <item>You can go as far as your mind lets you. What you believe, you can achieve.</item>
        <item>The best time to plant a tree was 20 years ago. The second best time is now.</item>
        <item>Write it. Shoot it. Publish it. Crochet it, sauté it, whatever. MAKE.</item>
    </string-array>
    <string name="start">Start</string>
    <string name="achievements">Achievement</string>
    <string name="food">Food</string>
    <string name="Workouts">Workouts</string>
    <string name="fitnesstime">Fitness Time</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_staff">Show Staff</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chronometerInAndroid">Chronometer In Android</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="setFormat">Set Format</string>
    <string name="clearFormat">Clear Format</string>
    <string name="fourday">4 Day workout</string>
    <string name="womenw">Women workouts</string>
    <string name="homeW">Home workouts</string>
    <string name="muscle">Muscle Growth</string>
    <string name="total">Total Body</string>
    <string name="bmicalculator">Bmi Calculator</string>
    <string name="remind">Remind</string>
    <string name="motivation">Motivation</string>
    <string name="setreminder">Reminder is set.</string>
    <string name="min">Minutes to set reminder.</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
</resources>