<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20sp"
    tools:context=".WorkoutProgram">
    <TextView
        android:id="@+id/fourday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourday"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="5sp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/women_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/womenw"
        android:padding="5sp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_below="@+id/fourday"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeW"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_below="@+id/women_workout"
        android:padding="5sp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/musclegrowth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muscle"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_below="@+id/home"
        android:padding="5sp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/totalBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_below="@+id/musclegrowth"
        android:padding="5sp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/program_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select a Program"
        android:textColor="#1AA15F"
        android:gravity="center"
        android:layout_below="@+id/totalBody"
        android:padding="20sp"
        android:textSize="30sp"/>

</RelativeLayout>