<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chronometerInAndroid"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/restartButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/restart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/setFormat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restartButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/setFormat"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/clearFormat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setFormat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/clearFormat"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearFormat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#f00"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="600dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Button" />

</RelativeLayout>