<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            xmlns:Card_View="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_gravity="center"
            Card_View:cardCornerRadius="5dp"
            Card_View:cardElevation="5dp">


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLines="1"

                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/GetCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_gradient"
                    android:text="@string/sendCode"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/VCode"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/VerificationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/Submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_gradient"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/BackToLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/backLogin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:background="@drawable/round_background"
        android:padding="15dp"
        android:src="@drawable/profile"/>
</RelativeLayout>